--- a/src/app/components/Loader/loader.module.css
+++ b/src/app/components/Loader/loader.module.css
@@ -26,7 +26,7 @@
 .text {
   margin-top: 20px;
   font-size: 1.3em;
-  font-family: "Bricolage Grotesque", serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   color: white;
 
   
