--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   background-size: 20px 20px;
-  background: #ffffff;
+  background: #fff;
   cursor: url('/cursor.png'), auto;
   
 }
@@ -55,6 +55,7 @@
   text-decoration: none;
   color: inherit;
 }
+
 
 .cardrow {
   display: flex;
@@ -117,7 +118,7 @@ z-index: 100;
 
 .outerbox {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   border-radius: 0.4rem;
   overflow: hidden;
   box-shadow: 0 0px 10px rgba(255, 255, 255, 0.2);
@@ -351,6 +352,10 @@ z-index: 100;
   width: 70vw;
   flex-direction: column;
   gap: 10vh;
+}
+
+.tagline{
+  color: #3e3e3e;
 }
 
 /* New Styles for the Animated Background */
